--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.14",
     "@types/node": "^20.11.19",
+    "@vercel/node": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
