Fix vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -49,6 +49,5 @@
     }
   ],
   "cleanUrls": true,
-  "trailingSlash": false,
-  "domains": ["www.thenovaventure.com", "thenovaventure.com"]
+  "trailingSlash": false
 } 
