--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,11 @@
       }
     }
   ],
+  "functions": {
+    "api/*.ts": {
+      "runtime": "vercel-node@18"
+    }
+  },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
