--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/*.ts": {
-      "runtime": "vercel-node@18"
+      "runtime": "@vercel/node@2"
     }
   },
   "rewrites": [
