--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,10 @@
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/subscribe.ts": {
+      "runtime": "edge"
+    }
+  }
 } 
