--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,13 @@
   ],
   "routes": [
     {
+      "src": "^/assets/(.*)",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+    {
       "src": "/api/(.*)",
       "headers": {
         "Access-Control-Allow-Origin": "*",
@@ -22,6 +29,13 @@
         "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
       },
       "dest": "/api/$1"
+    },
+    {
+      "src": "^/(.*)\\.(js|css|json|webp|jpg|jpeg|png|svg|ico)$",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
     },
     {
       "src": "/(.*)",
