--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,8 @@
   ],
   "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1",
+      "src": "/api/(.*)",
+      "dest": "/api/$1",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
@@ -24,21 +24,21 @@
       }
     },
     {
-      "source": "/assets/(.*)",
+      "src": "/assets/(.*)",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
-      "source": "/(.*)\\.js",
+      "src": "/(.*)\\.js",
       "headers": {
         "Content-Type": "application/javascript; charset=utf-8",
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
