--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,9 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/src/api/$1",
+      "src": "/api/subscribe",
+      "methods": ["POST", "OPTIONS"],
+      "dest": "/src/api/subscribe.ts",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
